[package]
name = "multitool"
version = "0.0.1"
edition = "2024"
default-run = "multi"
repository = "https://github.com/wack/multitool"

[[bin]]
name = "multi"
path = "src/bin/main.rs"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.81"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-apigateway = "1.50.0"
aws-sdk-cloudwatch = "1.54.0"
aws-sdk-lambda = "1.56.0"
aws-smithy-types = "1.2.9"
bigdecimal = { version = "0.4.7", features = ["serde-json"] }
bon = "3.3.2"
chrono = "0.4.38"
clap = { version = "4.3", features = ["derive", "env"] }
console = "0.15.8"
derive-getters = "0.5.0"
dialoguer = "0.11.0"
directories = "6.0"
futures-core = "0.3.31"
futures-util = "0.3.31"
indexmap = { version = "2.1.0", features = ["serde"] }
miette = { version = "7", features = ["fancy"] }
mockall = "0.13.1"
multitool-sdk = { git = "https://github.com/wack/multitool-rust-sdk.git", branch = "trunk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.12", features = ["chrono"] }
thiserror = "2.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-graceful-shutdown = "0.16.0"
tokio-stream = { version = "0.1", features = ["time"] }
toml = { version = "0.8.8", features = ["preserve_order"] }
tracing = { version = "0.1.41", features = ["attributes"] }
uuid = { version = "1.9", features = ["serde", "v4"] }
pingora = { version = "0.3", features = [ "lb", "proxy" ] }
rand = { version = "0.9.0", features = ["small_rng"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
static_assertions = "1.1.0"

[features]
proxy = []
